fixed play, next and previous buttons, working with searchSong functionality - added some simple design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="/src/yt.js"></script>
   </head>
   <body>
-    <div id="yt-player"></div>
+    <div id="yt-player" style="display: none;"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
