working with design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Ljudio</title>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="/src/yt.js"></script>
+    <script src="https://use.fontawesome.com/fc64c5d326.js"></script>
   </head>
   <body>
     <div id="yt-player" style="display: none;"></div>
